--- a/package.xml
+++ b/package.xml
@@ -2,6 +2,9 @@
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <version>43.0</version>
     <types>
+        <members>AccCls2</members>
+        <members>AccCls3</members>
+        <members>AccCls4</members>
         <members>Welcome31</members>
         <members>WelcomeTest2</members>
         <name>ApexClass</name>
